# websocket

./: .gitignore  README.md  pyproject.toml
websockets/: db.sqlite3
websockets/chat/: consumers.py  models.py  routing.py  urls.py  views.py
websockets/chat/migrations/: 0001_initial.py
websockets/create_chat/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
websockets/create_chat/migrations/: 0001_initial.py
websockets/static/css/: style.css
websockets/static/js/: scripts.js
websockets/templates/: base.html  chat.html  create_chat.html
websockets/websockets/: asgi.py  settings.py  urls.py  wsgi.py
