[tool.poetry]
name = "websockets"
version = "0.1.0"
description = "django websockets"
authors = ["Nathan <n4-t3@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
daphne = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

